# portfolio-backend

./: .example.env  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
portfolio_admin/admin/: __init__.py  media_profile.py  portfolio.py  project.py  skill.py
portfolio_admin/migrations/: 0001_initial.py  0002_project.py  0003_auto_20201103_1339.py  0004_mediaprofile.py
portfolio_admin/models/: __init__.py  media_profile.py  portfolio.py  project.py  skill.py
portfolio_api/: apps.py  urls.py
portfolio_api/serializers/: __init__.py  media_profile.py  portfolio.py  project.py  skill.py
portfolio_api/views/: __init__.py  api_root.py  media_profile.py  portfolio.py  project.py  skill.py  url.py  user_list.py
portfolio_backend/: settings.py  urls.py
